--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Faker==35.2.0
 psycopg-binary==3.2.4
 psycopg2==2.9.10
 python-dateutil==2.9.0.post0
+python-decouple==3.8
 six==1.17.0
 sqlparse==0.5.3
 typing_extensions==4.12.2
