--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 asgiref==3.8.1
+dj-database-url==2.3.0
 Django==5.1.6
 django-debug-toolbar==5.0.1
 Faker==35.2.0
 pillow==11.1.0
 psycopg-binary==3.2.4
 psycopg2==2.9.10
+psycopg2-binary==2.9.10
 python-dateutil==2.9.0.post0
 python-decouple==3.8
 six==1.17.0
