--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ dj-database-url==2.3.0
 Django==5.1.6
 django-debug-toolbar==5.0.1
 Faker==35.2.0
+gunicorn==23.0.0
+packaging==24.2
 pillow==11.1.0
 psycopg-binary==3.2.4
 psycopg2==2.9.10
@@ -13,3 +15,4 @@ six==1.17.0
 sqlparse==0.5.3
 typing_extensions==4.12.2
 tzdata==2025.1
+waitress==3.0.2
