--- a/requirements.txt
+++ b/requirements.txt
@@ -6,13 +6,13 @@ Faker==35.2.0
 gunicorn==23.0.0
 packaging==24.2
 pillow==11.1.0
-psycopg-binary==3.2.4
-psycopg2==2.9.10
 psycopg2-binary==2.9.10
 python-dateutil==2.9.0.post0
 python-decouple==3.8
+setuptools==80.9.0
 six==1.17.0
 sqlparse==0.5.3
 typing_extensions==4.12.2
 tzdata==2025.1
 waitress==3.0.2
+wheel==0.45.1
